--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,6 @@
   margin: 50px auto;
   padding: 0.5rem;
   max-width: 600px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: 0.5em;
 }
