--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,13 +1,12 @@
-
 .header-wrapper {
-    background: #81d4fa;
-    padding: 0.5em 0;
+  background: #81d4fa;
+  padding: 0.5em 0;
 
-    .app-title {
-        font-family: 'Licorice', cursive;
-        font-size: 45px;
-        text-align: center;
-        color: #0d47a1 ;
-        cursor: default;
-    }
+  .app-title {
+    font-family: "Licorice", cursive;
+    font-size: 45px;
+    text-align: center;
+    color: #0d47a1;
+    cursor: default;
+  }
 }
